# ilqgames

include/ilqgames/cost/: final_time_cost.h  initial_time_cost.h
include/ilqgames/utils/: types.h  value_function.h
python/: default.yaml  simulator.py  simulator_node.py  visual.py
src/: concatenated_dynamical_system.cpp  game_solver.cpp  ilq_solver.cpp  solve_lq_game.cpp  three_player_intersection_example.cpp
src/simulator/: CMakeLists.txt  package.xml  setup.py
src/simulator/config/: default.yaml
src/simulator/launch/: simulator.launch
src/simulator/scripts/: simulator_node.py
src/simulator/src/simulator/: core.py  visual.py
test/: test_player_cost.cpp  test_quadraticization.cpp  test_solve_lq_game.cpp
